[gd_scene load_steps=17 format=3 uid="uid://disepgw6epns6"]

[ext_resource type="PackedScene" uid="uid://dsgvm3dda1kjp" path="res://ui/header.tscn" id="1_2ypbp"]
[ext_resource type="Theme" uid="uid://c8lf57q2f23tp" path="res://ui/theme/menu_theme.tres" id="1_ipe3s"]
[ext_resource type="Script" uid="uid://xlpmpyscjauv" path="res://ui/menus/menu_scene.gd" id="1_uybnw"]
[ext_resource type="PackedScene" uid="uid://c5kj1uj0ohnmm" path="res://ui/settings/setting_bool.tscn" id="2_uybnw"]
[ext_resource type="PackedScene" uid="uid://cm3h6xr6v7ewi" path="res://ui/label2.tscn" id="3_gt4ph"]
[ext_resource type="PackedScene" uid="uid://b1r8nehsgp111" path="res://ui/settings/setting_number.tscn" id="3_sgkbc"]
[ext_resource type="Texture2D" uid="uid://bqp14yj0y1q2w" path="res://assets/icon/icon_folder.png" id="4_ef7k1"]
[ext_resource type="PackedScene" uid="uid://dqm2w5ummvxsm" path="res://ui/option_button.tscn" id="4_gt4ph"]
[ext_resource type="PackedScene" uid="uid://bgsxagi62acni" path="res://ui/settings/setting_options.tscn" id="5_gms2o"]
[ext_resource type="PackedScene" uid="uid://jvyexp7mquoa" path="res://ui/button.tscn" id="6_dpltf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpltf"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.12549, 0.156863, 0.188235, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ef7k1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_et8l8"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 0)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_01kw3"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 0)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h84ix"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dl2ue"]

[node name="Scene" type="PanelContainer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.5
offset_right = -1048.5
offset_bottom = -817.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ipe3s")
theme_override_styles/panel = SubResource("StyleBoxFlat_dpltf")
script = ExtResource("1_uybnw")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelCurrentScene" parent="VBoxContainer" instance=ExtResource("3_gt4ph")]
unique_name_in_owner = true
layout_mode = 2
text_left = "Current Scene"
align_right_text_to_right = true

[node name="Option_LoadScene" parent="VBoxContainer" instance=ExtResource("4_gt4ph")]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ef7k1")

[node name="Option_LoadScene2" type="OptionButton" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1
selected = 0
item_count = 1
popup/item_0/text = "Change Scene..."
popup/item_0/icon = ExtResource("4_ef7k1")
popup/item_0/id = 0

[node name="ButtonOpenSceneConfig" parent="VBoxContainer" instance=ExtResource("6_dpltf")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_et8l8")
text = "Configure scene"
text_right = "..."
inline = true

[node name="LabelHeader" parent="VBoxContainer" instance=ExtResource("1_2ypbp")]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &""
text = "Camera"

[node name="Setting_MouseCamera" parent="VBoxContainer" instance=ExtResource("2_uybnw")]
unique_name_in_owner = true
layout_mode = 2
setting_name = "Mouse Pan & Zoom Control"

[node name="Setting_HumanCamera" parent="VBoxContainer" instance=ExtResource("2_uybnw")]
unique_name_in_owner = true
layout_mode = 2
setting_name = "Humanize Camera Movements"

[node name="Setting_HumanCameraStrength" parent="VBoxContainer" instance=ExtResource("3_sgkbc")]
unique_name_in_owner = true
modulate = Color(0.25, 0.25, 0.25, 1)
layout_mode = 2
max_value = 0.1
step = 0.001
as_percent = true
percent_factor = 1000.0
format_string = "%d%%"
setting_name = "Noise Strength"
setting_name_indent = 32
enabled = false

[node name="Setting_HumanCameraFrequency" parent="VBoxContainer" instance=ExtResource("3_sgkbc")]
unique_name_in_owner = true
modulate = Color(0.25, 0.25, 0.25, 1)
layout_mode = 2
max_value = 2.0
step = 0.02
as_percent = true
percent_factor = 50.0
format_string = "%d%%"
setting_name = "Noise Frequency"
setting_name_indent = 32
enabled = false

[node name="ButtonOpenCameraConfig" parent="VBoxContainer" instance=ExtResource("6_dpltf")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_01kw3")
text = "Configure camera"
text_right = "..."
inline = true

[node name="LabelHeader2" parent="VBoxContainer" instance=ExtResource("1_2ypbp")]
layout_mode = 2
theme_type_variation = &""
text = "3D Model"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Setting_ModelType" parent="VBoxContainer/VBoxContainer2" instance=ExtResource("5_gms2o")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h84ix")
items = PackedStringArray("Auto", "M8 Model:01", "M8 Model:02")
value = 0
setting_name = "Device Model"

[node name="Setting_ModelHighlightOpacity" parent="VBoxContainer/VBoxContainer2" instance=ExtResource("3_sgkbc")]
unique_name_in_owner = true
layout_mode = 2
setting_value_min_width = 32
max_value = 1.0
value = 1.0
as_percent = true
format_string = "%d%%"
setting_name = "Highlight Opacity"

[node name="Setting_ModelScreenFilter" parent="VBoxContainer/VBoxContainer2" instance=ExtResource("5_gms2o")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_dl2ue")
items = PackedStringArray("Nearest", "Linear")
value = 0
setting_name = "Screen Filter"

[node name="Setting_ModelScreenEmission" parent="VBoxContainer/VBoxContainer2" instance=ExtResource("3_sgkbc")]
unique_name_in_owner = true
layout_mode = 2
setting_value_min_width = 32
max_value = 1.0
value = 0.5
as_percent = true
format_string = "%d%%"
setting_name = "Screen Emission"
